<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addHabitLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingLeft="12dp"
    android:paddingTop="12dp"
    android:paddingRight="12dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutLabel"
        style="@style/materialTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:counterEnabled="true"
        app:counterMaxLength="24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LabelInput"
            style="@style/materialTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/label"
            android:inputType="text"
            android:maxLength="24" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutDescription"
        style="@style/materialTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:counterEnabled="true"
        app:counterMaxLength="60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutLabel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/DescriptionInput"
            style="@style/materialTextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="text"
            android:maxLength="60"
            android:maxLines="4" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutDescription">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button21day"
            style="@style/buttonSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day21"
            android:textAllCaps="false"
            app:shapeAppearance="@style/buttonLeftRounded" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button100days"
            style="@style/buttonSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/day100"
            android:textAllCaps="false"
            app:shapeAppearance="@style/buttonRightRounded" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBoxRemind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/transparent"
        android:buttonTint="@color/element"
        android:scaleX="2"
        android:scaleY="2"
        android:text="@string/remind"
        android:textColor="@color/white"
        android:textSize="9sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/SliderLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxRemind">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/verticalSliderHours"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"

            android:clipToPadding="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="1"
            tools:listitem="@layout/picker_item_layout">

        </androidx.recyclerview.widget.RecyclerView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/verticalSliderMinutes"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:clipToPadding="false"
            android:paddingLeft="157dp"
            android:paddingRight="157dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/verticalSliderHours"
            tools:itemCount="1"
            tools:listitem="@layout/picker_item_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SliderLayout">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/startFrom"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonDateSelect"
            style="@style/styledButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/today" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonSave"
        style="@style/styledButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>